# BACman

./: .gitignore  BACNET_PROTOCOL_REVIEW.md  CLAUDE.md  COMMERCIAL_PARITY_ROADMAP.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_CODE_REVIEW_SUMMARY.md  GATEWAY_TEST_STATUS.md  INTEGRATION_TEST_GUIDE.md  MSTP_PROTOCOL_REQUIREMENTS.md  MSTP_TESTING_PLAN.md  MSTP_TIMING_FIX_PROGRESS.md  MSTP_UART_IMPLEMENTATIONS_RESEARCH.md  MSTP_WIRESHARK_CAPTURE.md  PROJECT_COMPLETION_PLAN.md  RUST_CODE_QUALITY_REVIEW.md  crc_test_runner.rs  mstp_capture.py  state_machine_test.rs
BACnet_Standard/: 00-Front-Matter.md  00-INDEX.md  03-DEFINITIONS.md  12-MODELING-CONTROL-DEVICES-AS-A-COLLECTION-OF-OBJECTS.md  13-ALARM-AND-EVENT-SERVICES.md  14-FILE-ACCESS-SERVICES.md  15-OBJECT-ACCESS-SERVICES.md  16-REMOTE-DEVICE-MANAGEMENT-SERVICES.md  17-AUTHENTICATION-AND-AUTHORIZATION-SERVICES.md  21-FORMAL-DESCRIPTION-OF-APPLICATION-PROTOCOL-DATA-UNITS.md  22-CONFORMANCE-AND-INTEROPERABILITY.md  24-DELETED-CLAUSE.md  25-REFERENCES.md  Annex-A-PROTOCOL-IMPLEMENTATION-CONFORMANCE-STATEMENT.md  Annex-B-GUIDE-TO-SPECIFYING-BACnet-DEVICES.md  Annex-B-GUIDETO-SPECIFYING-BACnet-DEVICES.md  Annex-C-REMOVED.md  Annex-C-Removed-...........................................md  Annex-D-REMOVED.md  Annex-D-Removed-...........................................md  Annex-F-EXAMPLES-OF-APDU-ENCODING.md  (+25 more)
mstp-ip-gateway/: Cargo.toml  partitions.csv  sdkconfig.defaults
mstp-ip-gateway/.cargo/: config.toml
mstp-ip-gateway/src/: config.rs  crc_tests.rs  display.rs  gateway.rs  local_device.rs  main.rs  mstp_driver.rs  transaction.rs  web.rs
(+80 files in other folders)
