[package]
name = "mstp-ip-gateway"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "mstp-ip-gateway"
harness = false # do not use the built in cargo test harness -> resolve linkance issues

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.51", default-features = false }
esp-idf-hal = "0.45"
esp-idf-sys = "0.36"
embedded-hal = "1.0"
heapless = "0.9"
anyhow = "1.0"

# Display
display-interface-spi = "0.5"
mipidsi = "0.8"
embedded-graphics = "0.8"

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }

# Web server utilities
urlencoding = "2.1"
embedded-svc = "0.28"

# Utilities
enumset = "1.1"

# BACnet library (local path)
bacnet-rs = { path = "../bacnet-rs", default-features = false, features = ["std"] }

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }
